QFT Kronecker Decompose

--- a/01-QFT-Calc.ipynb
+++ b/01-QFT-Calc.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "377536cb",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "b23b757c",
    "metadata": {},
    "outputs": [],
@@ -158,12 +158,14 @@
     "psi_ket = np.array([[0],[1]])\n",
     "\n",
     "psi_ket = np.array([[0],[0],[0],[1]])\n",
-    "\n"
+    "\n",
+    "\n",
+    "psi_ket = np.array([[1],[0],[0],[0],[0],[0],[0],[0]])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "bddeef6a",
    "metadata": {},
    "outputs": [
@@ -180,10 +182,14 @@
        "\n",
        "\n",
        "\\begin{bmatrix}\n",
-       "\\tfrac{1}{2} & \\tfrac{1}{2} & \\tfrac{1}{2} & \\tfrac{1}{2}  \\\\\n",
-       " \\tfrac{1}{2} & \\tfrac{1}{2}i & -\\tfrac{1}{2} & -\\tfrac{1}{2}i  \\\\\n",
-       " \\tfrac{1}{2} & -\\tfrac{1}{2} & \\tfrac{1}{2} & -\\tfrac{1}{2}  \\\\\n",
-       " \\tfrac{1}{2} & -\\tfrac{1}{2}i & -\\tfrac{1}{2} & \\tfrac{1}{2}i  \\\\\n",
+       "\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}}  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(1 + i) & \\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(-1 + i) & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(-1 - i) & -\\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(1 - i)  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}}i & -\\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}}i & -\\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}}i  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(-1 + i) & -\\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(1 + i) & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(1 - i) & \\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(-1 - i)  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}}  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(-1 - i) & \\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(1 - i) & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(1 + i) & -\\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(-1 + i)  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}}i & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}}i & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}}i  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(1 - i) & -\\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(-1 - i) & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(-1 + i) & \\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(1 + i)  \\\\\n",
        " \\end{bmatrix}\n"
       ],
       "text/plain": [
@@ -206,10 +212,14 @@
        "\n",
        "\n",
        "\\begin{bmatrix}\n",
-       "0  \\\\\n",
+       "1  \\\\\n",
        " 0  \\\\\n",
        " 0  \\\\\n",
-       " 1  \\\\\n",
+       " 0  \\\\\n",
+       " 0  \\\\\n",
+       " 0  \\\\\n",
+       " 0  \\\\\n",
+       " 0  \\\\\n",
        " \\end{bmatrix}\n"
       ],
       "text/plain": [
@@ -232,10 +242,14 @@
        "\n",
        "\n",
        "\\begin{bmatrix}\n",
-       "\\tfrac{1}{2}  \\\\\n",
-       " -\\tfrac{1}{2}i  \\\\\n",
-       " -\\tfrac{1}{2}  \\\\\n",
-       " \\tfrac{1}{2}i  \\\\\n",
+       "\\tfrac{1}{\\sqrt{8}}  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}}  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}}  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}}  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}}  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}}  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}}  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}}  \\\\\n",
        " \\end{bmatrix}\n"
       ],
       "text/plain": [
