--- a/05-Latex-Redering.ipynb
+++ b/05-Latex-Redering.ipynb
@@ -191,8 +191,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "030fccaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "\n",
+       "\\begin{bmatrix}\n",
+       "0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0  \\\\\n",
+       " 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0  \\\\\n",
+       " 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0  \\\\\n",
+       " 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0  \\\\\n",
+       " 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0  \\\\\n",
+       " 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0  \\\\\n",
+       " 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0  \\\\\n",
+       " 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0  \\\\\n",
+       " 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0  \\\\\n",
+       " 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0  \\\\\n",
+       " \\end{bmatrix}\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from qiskit.visualization import array_to_latex\n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.zeros(100).reshape(10,10)\n",
+    "\n",
+    "\n",
+    "# Max rows and cols = 24\n",
+    "array_to_latex(array=x, prefix='Output = ', max_size=(10,10)) # If max_size not set then matrix will have ellipses\n",
+    "# print latex source only: Source=True\n",
+    "latex_source = array_to_latex(array=x, source=True, max_size=(10,10))\n",
+    "\n",
+    "# If you are using Jupyter Notebook: \n",
+    "from IPython.display import display, Markdown\n",
+    "display(Markdown(latex_source))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "df4c3038",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1+0j)\n",
+      "(1-4.898587196589413e-16j)\n",
+      "(1-9.797174393178826e-16j)\n",
+      "(1-1.4695761589768238e-15j)\n",
+      "(1-1.959434878635765e-15j)\n",
+      "(1-2.4492935982947065e-15j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cmath\n",
+    "for i in range(0,12,2):\n",
+    "    print(cmath.exp(2*1j*cmath.pi*i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "191d0f9a",
    "metadata": {},
    "outputs": [],
    "source": []
