Eigen Solve and Phase Estimation

--- a/01-QFT-Calc.ipynb
+++ b/01-QFT-Calc.ipynb
@@ -25,18 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "a5c53f94",
    "metadata": {},
    "outputs": [],
    "source": [
+    "QFT_MATRIX_LATEX = \"\"\n",
+    "\n",
     "def qft_render(sv_entries_count):\n",
     "    import numpy as np \n",
     "    import cmath\n",
     "    from IPython.display import display, Markdown\n",
     "    print(\"QFT matrix for statevctor with \", sv_entries_count, \" entries is:\\n\")\n",
     "    N   = str(sv_entries_count)\n",
-    "    text = r\"$QFT = \\frac{{1}}{{\\sqrt{{{N}}}}} \\begin{{bmatrix}}\".format(N=N)\n",
+    "    \n",
+    "    text1 = r\"$QFT = \\frac{{1}}{{\\sqrt{{{N}}}}} \\begin{{bmatrix}}\".format(N=N)\n",
     "    ele = ''\n",
     "    dim = sv_entries_count\n",
     "    # Code for rendering loop \n",
@@ -51,12 +54,42 @@
     "                ele = '\\omega^{'+str(exponent)+'}'\n",
     "                \n",
     "            if j == dim-1:\n",
-    "                text = text + r' ' + ele + r' \\\\'\n",
+    "                text1 = text1 + r' ' + ele + r' \\\\'\n",
     "            else:        \n",
-    "                text = text + r' ' + ele + r' &'\n",
+    "                text1 = text1 + r' ' + ele + r' &'\n",
     "     # end of for   \n",
-    "    text = text + r' \\end{bmatrix}$'\n",
-    "    display(Markdown(text))\n"
+    "    text1 = text1 + r' \\end{bmatrix}$'\n",
+    "    \n",
+    "    \n",
+    "    text2 = r\"$QFT = \\frac{{1}}{{\\sqrt{{{N}}}}} \\begin{{bmatrix}}\".format(N=N)\n",
+    "    ele = ''\n",
+    "    dim = sv_entries_count\n",
+    "    # Code for rendering loop \n",
+    "    for i in range(dim): # row indexer = Table\n",
+    "        for j in range(dim): # column indexer\n",
+    "            exponent = i * j % sv_entries_count\n",
+    "            if exponent == 0:\n",
+    "                ele = '1'\n",
+    "            elif exponent == 1:\n",
+    "                ele = '\\omega'\n",
+    "            else:\n",
+    "                ele = '\\omega^{'+str(exponent)+'}'\n",
+    "                \n",
+    "            if j == dim-1:\n",
+    "                text2 = text2 + r' ' + ele + r' \\\\'\n",
+    "            else:        \n",
+    "                text2 = text2 + r' ' + ele + r' &'\n",
+    "     # end of for   \n",
+    "    text2 = text2 + r' \\end{bmatrix}$'\n",
+    "    \n",
+    "    \n",
+    "    #QFT_MATRIX_LATEX1 = text1\n",
+    "    #QFT_MATRIX_LATEX2 = text2\n",
+    "    \n",
+    "    display(Markdown(text1))\n",
+    "    display(Markdown(text2))\n",
+    "    \n",
+    "    #return QFT_MATRIX_LATEX1 + \"\\\\\\\\\" + QFT_MATRIX_LATEX2\n"
    ]
   },
   {
@@ -70,22 +103,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "7ecafdac",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QFT matrix for statevctor with  4  entries is:\n",
+      "QFT matrix for statevctor with  8  entries is:\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/markdown": [
-       "$QFT = \\frac{1}{\\sqrt{4}} \\begin{bmatrix} 1 & 1 & 1 & 1 \\\\ 1 & \\omega & \\omega^{2} & \\omega^{3} \\\\ 1 & \\omega^{2} & \\omega^{4} & \\omega^{6} \\\\ 1 & \\omega^{3} & \\omega^{6} & \\omega^{9} \\\\ \\end{bmatrix}$"
+       "$QFT = \\frac{1}{\\sqrt{8}} \\begin{bmatrix} 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\\\ 1 & \\omega & \\omega^{2} & \\omega^{3} & \\omega^{4} & \\omega^{5} & \\omega^{6} & \\omega^{7} \\\\ 1 & \\omega^{2} & \\omega^{4} & \\omega^{6} & \\omega^{8} & \\omega^{10} & \\omega^{12} & \\omega^{14} \\\\ 1 & \\omega^{3} & \\omega^{6} & \\omega^{9} & \\omega^{12} & \\omega^{15} & \\omega^{18} & \\omega^{21} \\\\ 1 & \\omega^{4} & \\omega^{8} & \\omega^{12} & \\omega^{16} & \\omega^{20} & \\omega^{24} & \\omega^{28} \\\\ 1 & \\omega^{5} & \\omega^{10} & \\omega^{15} & \\omega^{20} & \\omega^{25} & \\omega^{30} & \\omega^{35} \\\\ 1 & \\omega^{6} & \\omega^{12} & \\omega^{18} & \\omega^{24} & \\omega^{30} & \\omega^{36} & \\omega^{42} \\\\ 1 & \\omega^{7} & \\omega^{14} & \\omega^{21} & \\omega^{28} & \\omega^{35} & \\omega^{42} & \\omega^{49} \\\\ \\end{bmatrix}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "$QFT = \\frac{1}{\\sqrt{8}} \\begin{bmatrix} 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\\\ 1 & \\omega & \\omega^{2} & \\omega^{3} & \\omega^{4} & \\omega^{5} & \\omega^{6} & \\omega^{7} \\\\ 1 & \\omega^{2} & \\omega^{4} & \\omega^{6} & 1 & \\omega^{2} & \\omega^{4} & \\omega^{6} \\\\ 1 & \\omega^{3} & \\omega^{6} & \\omega & \\omega^{4} & \\omega^{7} & \\omega^{2} & \\omega^{5} \\\\ 1 & \\omega^{4} & 1 & \\omega^{4} & 1 & \\omega^{4} & 1 & \\omega^{4} \\\\ 1 & \\omega^{5} & \\omega^{2} & \\omega^{7} & \\omega^{4} & \\omega & \\omega^{6} & \\omega^{3} \\\\ 1 & \\omega^{6} & \\omega^{4} & \\omega^{2} & 1 & \\omega^{6} & \\omega^{4} & \\omega^{2} \\\\ 1 & \\omega^{7} & \\omega^{6} & \\omega^{5} & \\omega^{4} & \\omega^{3} & \\omega^{2} & \\omega \\\\ \\end{bmatrix}$"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -97,7 +144,7 @@
    ],
    "source": [
     "# sv size is power of 2 but could be any value as well e.g. 1,2,3,4,5...\n",
-    "sv_size = 2**2\n",
+    "sv_size = 2**3\n",
     "qft_render(sv_size)"
    ]
   },
@@ -136,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "b23b757c",
    "metadata": {},
    "outputs": [],
@@ -163,12 +210,20 @@
     "\n",
     "#psi_ket = np.array(np.zeros(32))\n",
     "\n",
-    "psi_ket = np.array([[0],[1/math.sqrt(2)],[1/math.sqrt(2)],[0]])\n"
+    "psi_ket = np.array([[0],[1/math.sqrt(2)],[1/math.sqrt(2)],[0]])\n",
+    "\n",
+    "#psi_ket = np.array([[0]]*8)\n",
+    "psi_ket = np.array([[0]]*16) \n",
+    "\n",
+    "\n",
+    "psi_ket = np.array([[1],[-1],[-1],[1]]) * 1/2\n",
+    "\n",
+    "psi_ket = np.array([[0]]*16) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "bddeef6a",
    "metadata": {},
    "outputs": [
@@ -185,10 +240,14 @@
        "\n",
        "\n",
        "\\begin{bmatrix}\n",
-       "\\tfrac{1}{2} & \\tfrac{1}{2} & \\tfrac{1}{2} & \\tfrac{1}{2}  \\\\\n",
-       " \\tfrac{1}{2} & \\tfrac{1}{2}i & -\\tfrac{1}{2} & -\\tfrac{1}{2}i  \\\\\n",
-       " \\tfrac{1}{2} & -\\tfrac{1}{2} & \\tfrac{1}{2} & -\\tfrac{1}{2}  \\\\\n",
-       " \\tfrac{1}{2} & -\\tfrac{1}{2}i & -\\tfrac{1}{2} & \\tfrac{1}{2}i  \\\\\n",
+       "\\tfrac{1}{4} & \\tfrac{1}{4} & \\tfrac{1}{4} & \\tfrac{1}{4} & \\cdots & \\tfrac{1}{4} & \\tfrac{1}{4} & \\tfrac{1}{4}  \\\\\n",
+       " \\tfrac{1}{4} & 0.23097 + 0.09567i & 0.17678(1 + i) & 0.09567 + 0.23097i & \\cdots & 0.09567 - 0.23097i & 0.17678(1 - i) & 0.23097 - 0.09567i  \\\\\n",
+       " \\tfrac{1}{4} & 0.17678(1 + i) & \\tfrac{1}{4}i & 0.17678(-1 + i) & \\cdots & 0.17678(-1 - i) & -\\tfrac{1}{4}i & 0.17678(1 - i)  \\\\\n",
+       " \\tfrac{1}{4} & 0.09567 + 0.23097i & 0.17678(-1 + i) & -0.23097 - 0.09567i & \\cdots & -0.23097 + 0.09567i & 0.17678(-1 - i) & 0.09567 - 0.23097i  \\\\\n",
+       " \\vdots & \\vdots & \\vdots & \\vdots & \\ddots & \\vdots & \\vdots & \\vdots \\\\\n",
+       " \\tfrac{1}{4} & 0.09567 - 0.23097i & 0.17678(-1 - i) & -0.23097 + 0.09567i & \\cdots & -0.23097 - 0.09567i & 0.17678(-1 + i) & 0.09567 + 0.23097i  \\\\\n",
+       " \\tfrac{1}{4} & 0.17678(1 - i) & -\\tfrac{1}{4}i & 0.17678(-1 - i) & \\cdots & 0.17678(-1 + i) & \\tfrac{1}{4}i & 0.17678(1 + i)  \\\\\n",
+       " \\tfrac{1}{4} & 0.23097 - 0.09567i & 0.17678(1 - i) & 0.09567 - 0.23097i & \\cdots & 0.09567 + 0.23097i & 0.17678(1 + i) & 0.23097 + 0.09567i  \\\\\n",
        " \\end{bmatrix}\n"
       ],
       "text/plain": [
@@ -212,8 +271,12 @@
        "\n",
        "\\begin{bmatrix}\n",
        "0  \\\\\n",
-       " \\tfrac{1}{\\sqrt{2}}  \\\\\n",
-       " \\tfrac{1}{\\sqrt{2}}  \\\\\n",
+       " 0  \\\\\n",
+       " 0  \\\\\n",
+       " 0  \\\\\n",
+       " \\vdots \\\\\n",
+       " 0  \\\\\n",
+       " 0  \\\\\n",
        " 0  \\\\\n",
        " \\end{bmatrix}\n"
       ],
@@ -237,10 +300,14 @@
        "\n",
        "\n",
        "\\begin{bmatrix}\n",
-       "\\tfrac{1}{\\sqrt{2}}  \\\\\n",
-       " \\tfrac{1}{\\sqrt{8}}(-1 + i)  \\\\\n",
+       "0  \\\\\n",
        " 0  \\\\\n",
-       " \\tfrac{1}{\\sqrt{8}}(-1 - i)  \\\\\n",
+       " 0  \\\\\n",
+       " 0  \\\\\n",
+       " \\vdots \\\\\n",
+       " 0  \\\\\n",
+       " 0  \\\\\n",
+       " 0  \\\\\n",
        " \\end{bmatrix}\n"
       ],
       "text/plain": [
@@ -272,8 +339,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "74e28551",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.7071067811865474-0.7071067811865477j)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import cmath\n",
+    "import numpy as np\n",
+    "\n",
+    "ccc = cmath.exp(2*1j*cmath.pi*42/16)\n",
+    "ccc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4125d25",
    "metadata": {},
    "outputs": [],
    "source": []
