--- a/02-iQFT-Calc.ipynb
+++ b/02-iQFT-Calc.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "2de350fe",
    "metadata": {
     "scrolled": true
@@ -121,14 +121,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invrese QFT matrix (-ve exponents) for statevctor with  8  entries is:\n",
+      "Invrese QFT matrix (-ve exponents) for statevctor with  4  entries is:\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/markdown": [
-       "$QFT^{\\dagger} = \\frac{1}{\\sqrt{8}} \\begin{bmatrix} 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\\\ 1 & \\omega^{-1} & \\omega^{-2} & \\omega^{-3} & \\omega^{-4} & \\omega^{-5} & \\omega^{-6} & \\omega^{-7} \\\\ 1 & \\omega^{-2} & \\omega^{-4} & \\omega^{-6} & \\omega^{-8} & \\omega^{-10} & \\omega^{-12} & \\omega^{-14} \\\\ 1 & \\omega^{-3} & \\omega^{-6} & \\omega^{-9} & \\omega^{-12} & \\omega^{-15} & \\omega^{-18} & \\omega^{-21} \\\\ 1 & \\omega^{-4} & \\omega^{-8} & \\omega^{-12} & \\omega^{-16} & \\omega^{-20} & \\omega^{-24} & \\omega^{-28} \\\\ 1 & \\omega^{-5} & \\omega^{-10} & \\omega^{-15} & \\omega^{-20} & \\omega^{-25} & \\omega^{-30} & \\omega^{-35} \\\\ 1 & \\omega^{-6} & \\omega^{-12} & \\omega^{-18} & \\omega^{-24} & \\omega^{-30} & \\omega^{-36} & \\omega^{-42} \\\\ 1 & \\omega^{-7} & \\omega^{-14} & \\omega^{-21} & \\omega^{-28} & \\omega^{-35} & \\omega^{-42} & \\omega^{-49} \\\\ \\end{bmatrix}$"
+       "$QFT^{\\dagger} = \\frac{1}{\\sqrt{4}} \\begin{bmatrix} 1 & 1 & 1 & 1 \\\\ 1 & \\omega^{-1} & \\omega^{-2} & \\omega^{-3} \\\\ 1 & \\omega^{-2} & \\omega^{-4} & \\omega^{-6} \\\\ 1 & \\omega^{-3} & \\omega^{-6} & \\omega^{-9} \\\\ \\end{bmatrix}$"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -141,14 +141,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inverse QFT matrix (+ve exponents) for statevector with  8  entries is:\n",
+      "Inverse QFT matrix (+ve exponents) for statevector with  4  entries is:\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/markdown": [
-       "$QFT^{\\dagger} = \\frac{1}{\\sqrt{8}} \\begin{bmatrix} 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\\\ 1 & \\omega^{7} & \\omega^{14} & \\omega^{21} & \\omega^{28} & \\omega^{35} & \\omega^{42} & \\omega^{49} \\\\ 1 & \\omega^{6} & \\omega^{12} & \\omega^{18} & \\omega^{24} & \\omega^{30} & \\omega^{36} & \\omega^{42} \\\\ 1 & \\omega^{5} & \\omega^{10} & \\omega^{15} & \\omega^{20} & \\omega^{25} & \\omega^{30} & \\omega^{35} \\\\ 1 & \\omega^{4} & \\omega^{8} & \\omega^{12} & \\omega^{16} & \\omega^{20} & \\omega^{24} & \\omega^{28} \\\\ 1 & \\omega^{3} & \\omega^{6} & \\omega^{9} & \\omega^{12} & \\omega^{15} & \\omega^{18} & \\omega^{21} \\\\ 1 & \\omega^{2} & \\omega^{4} & \\omega^{6} & \\omega^{8} & \\omega^{10} & \\omega^{12} & \\omega^{14} \\\\ 1 & \\omega^{1} & \\omega^{2} & \\omega^{3} & \\omega^{4} & \\omega^{5} & \\omega^{6} & \\omega^{7} \\\\ \\end{bmatrix}$"
+       "$QFT^{\\dagger} = \\frac{1}{\\sqrt{4}} \\begin{bmatrix} 1 & 1 & 1 & 1 \\\\ 1 & \\omega^{3} & \\omega^{6} & \\omega^{9} \\\\ 1 & \\omega^{2} & \\omega^{4} & \\omega^{6} \\\\ 1 & \\omega^{1} & \\omega^{2} & \\omega^{3} \\\\ \\end{bmatrix}$"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -160,7 +160,7 @@
    ],
    "source": [
     "# Size of state vector \n",
-    "sv_size = 2**3\n",
+    "sv_size = 4\n",
     "iqft_render_nx(sv_size)\n",
     "iqft_render_px(sv_size)\n"
    ]
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "4c4c39c8",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "16bae6c6",
    "metadata": {},
    "outputs": [],
@@ -220,12 +220,14 @@
     "psi_ket = np.array([[1],[0],[0],[0],[0],[0],[0],[0]])\n",
     "\n",
     "psi_ket = np.array([[1],[1],[1],[1]]) * 1/2\n",
+    "\n",
+    "psi_ket = np.array([[0]]*4) \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "98a50972",
    "metadata": {},
    "outputs": [
@@ -268,10 +270,10 @@
        "\n",
        "\n",
        "\\begin{bmatrix}\n",
-       "\\tfrac{1}{2}  \\\\\n",
-       " \\tfrac{1}{2}  \\\\\n",
-       " \\tfrac{1}{2}  \\\\\n",
-       " \\tfrac{1}{2}  \\\\\n",
+       "0  \\\\\n",
+       " 0  \\\\\n",
+       " 0  \\\\\n",
+       " 0  \\\\\n",
        " \\end{bmatrix}\n"
       ],
       "text/plain": [
@@ -294,7 +296,7 @@
        "\n",
        "\n",
        "\\begin{bmatrix}\n",
-       "1  \\\\\n",
+       "0  \\\\\n",
        " 0  \\\\\n",
        " 0  \\\\\n",
        " 0  \\\\\n",
