--- a/09-Roots-of-Unity.ipynb
+++ b/09-Roots-of-Unity.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "189e53b0",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "38497ad6",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "e65fd255",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
     {
      "data": {
       "text/markdown": [
-       "For N=8, the Complex plane is divided into 8 equal parts by an angle of $0.25 \\pi$ or $45.0 ^{\\circ}$ ."
+       "For N=4, the Complex plane is divided into 4 equal parts by an angle of $0.5 \\pi$ or $90.0 ^{\\circ}$ ."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -258,7 +258,7 @@
     {
      "data": {
       "text/markdown": [
-       "Root-1: $\\omega^{1} = \\begin{bmatrix}\\tfrac{1}{\\sqrt{2}}(1 + i)   \\end{bmatrix}$ which is COMPLEX"
+       "Root-1: $\\omega^{1} = \\begin{bmatrix}i   \\end{bmatrix}$ which is PURE IMAGINARY"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -270,7 +270,7 @@
     {
      "data": {
       "text/markdown": [
-       "Root-2: $\\omega^{2} = \\begin{bmatrix}i   \\end{bmatrix}$ which is PURE IMAGINARY"
+       "Root-2: $\\omega^{2} = \\begin{bmatrix}-1   \\end{bmatrix}$ which is PURE REAL"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -282,55 +282,7 @@
     {
      "data": {
       "text/markdown": [
-       "Root-3: $\\omega^{3} = \\begin{bmatrix}\\tfrac{1}{\\sqrt{2}}(-1 + i)   \\end{bmatrix}$ which is COMPLEX"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "Root-4: $\\omega^{4} = \\begin{bmatrix}-1   \\end{bmatrix}$ which is PURE REAL"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "Root-5: $\\omega^{5} = \\begin{bmatrix}\\tfrac{1}{\\sqrt{2}}(-1 - i)   \\end{bmatrix}$ which is COMPLEX"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "Root-6: $\\omega^{6} = \\begin{bmatrix}-i   \\end{bmatrix}$ which is PURE IMAGINARY"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "Root-7: $\\omega^{7} = \\begin{bmatrix}\\tfrac{1}{\\sqrt{2}}(1 - i)   \\end{bmatrix}$ which is COMPLEX"
+       "Root-3: $\\omega^{3} = \\begin{bmatrix}-i   \\end{bmatrix}$ which is PURE IMAGINARY"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -346,7 +298,7 @@
       "---------------------------------------\n",
       "Number of Real Roots:  2\n",
       "Number of Imaginary Roots:  2\n",
-      "Number of Complex Roots:  4\n"
+      "Number of Complex Roots:  0\n"
      ]
     }
    ],
@@ -362,7 +314,7 @@
     "# N = 2**num_qb\n",
     "\n",
     "# DIRECT CALCULATION OF ANGLE:\n",
-    "N = 8\n",
+    "N = 4\n",
     "\n",
     "root = []\n",
     "text = \"\"\n",
@@ -414,8 +366,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "db02491d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-2.220446049250313e-16+1.1102230246251565e-16j)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(np.array(root))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20b77dd9",
    "metadata": {},
    "outputs": [],
    "source": []
