--- a/01-QFT-Calc.ipynb
+++ b/01-QFT-Calc.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "a5c53f94",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "7ecafdac",
    "metadata": {
     "scrolled": true
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "b23b757c",
    "metadata": {},
    "outputs": [],
@@ -218,12 +218,12 @@
     "\n",
     "psi_ket = np.array([[1],[-1],[-1],[1]]) * 1/2\n",
     "\n",
-    "psi_ket = np.array([[0]]*16) \n"
+    "psi_ket = np.array([[0]]*8) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "bddeef6a",
    "metadata": {},
    "outputs": [
@@ -240,14 +240,14 @@
        "\n",
        "\n",
        "\\begin{bmatrix}\n",
-       "\\tfrac{1}{4} & \\tfrac{1}{4} & \\tfrac{1}{4} & \\tfrac{1}{4} & \\cdots & \\tfrac{1}{4} & \\tfrac{1}{4} & \\tfrac{1}{4}  \\\\\n",
-       " \\tfrac{1}{4} & 0.23097 + 0.09567i & 0.17678(1 + i) & 0.09567 + 0.23097i & \\cdots & 0.09567 - 0.23097i & 0.17678(1 - i) & 0.23097 - 0.09567i  \\\\\n",
-       " \\tfrac{1}{4} & 0.17678(1 + i) & \\tfrac{1}{4}i & 0.17678(-1 + i) & \\cdots & 0.17678(-1 - i) & -\\tfrac{1}{4}i & 0.17678(1 - i)  \\\\\n",
-       " \\tfrac{1}{4} & 0.09567 + 0.23097i & 0.17678(-1 + i) & -0.23097 - 0.09567i & \\cdots & -0.23097 + 0.09567i & 0.17678(-1 - i) & 0.09567 - 0.23097i  \\\\\n",
-       " \\vdots & \\vdots & \\vdots & \\vdots & \\ddots & \\vdots & \\vdots & \\vdots \\\\\n",
-       " \\tfrac{1}{4} & 0.09567 - 0.23097i & 0.17678(-1 - i) & -0.23097 + 0.09567i & \\cdots & -0.23097 - 0.09567i & 0.17678(-1 + i) & 0.09567 + 0.23097i  \\\\\n",
-       " \\tfrac{1}{4} & 0.17678(1 - i) & -\\tfrac{1}{4}i & 0.17678(-1 - i) & \\cdots & 0.17678(-1 + i) & \\tfrac{1}{4}i & 0.17678(1 + i)  \\\\\n",
-       " \\tfrac{1}{4} & 0.23097 - 0.09567i & 0.17678(1 - i) & 0.09567 - 0.23097i & \\cdots & 0.09567 + 0.23097i & 0.17678(1 + i) & 0.23097 + 0.09567i  \\\\\n",
+       "\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}}  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(1 + i) & \\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(-1 + i) & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(-1 - i) & -\\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(1 - i)  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}}i & -\\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}}i & -\\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}}i  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(-1 + i) & -\\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(1 + i) & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(1 - i) & \\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(-1 - i)  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}}  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(-1 - i) & \\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(1 - i) & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(1 + i) & -\\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(-1 + i)  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}}i & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{\\sqrt{8}} & -\\tfrac{1}{\\sqrt{8}}i & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{\\sqrt{8}}i  \\\\\n",
+       " \\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(1 - i) & -\\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(-1 - i) & -\\tfrac{1}{\\sqrt{8}} & \\tfrac{1}{4}(-1 + i) & \\tfrac{1}{\\sqrt{8}}i & \\tfrac{1}{4}(1 + i)  \\\\\n",
        " \\end{bmatrix}\n"
       ],
       "text/plain": [
@@ -274,7 +274,7 @@
        " 0  \\\\\n",
        " 0  \\\\\n",
        " 0  \\\\\n",
-       " \\vdots \\\\\n",
+       " 0  \\\\\n",
        " 0  \\\\\n",
        " 0  \\\\\n",
        " 0  \\\\\n",
@@ -304,7 +304,7 @@
        " 0  \\\\\n",
        " 0  \\\\\n",
        " 0  \\\\\n",
-       " \\vdots \\\\\n",
+       " 0  \\\\\n",
        " 0  \\\\\n",
        " 0  \\\\\n",
        " 0  \\\\\n",
